--- a/04.C#-OOP/12.Unit Testing - Lab/Skeleton/Skeleton.csproj
+++ b/04.C#-OOP/12.Unit Testing - Lab/Skeleton/Skeleton.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Axe.cs" />
     <Compile Include="Dummy.cs" />
+    <Compile Include="Fakes\FakeTarget.cs" />
+    <Compile Include="Fakes\FakeWeapon.cs" />
     <Compile Include="Hero.cs" />
     <Compile Include="Interfaces\ITarget.cs" />
     <Compile Include="Interfaces\IWeapon.cs" />
