--- a/10.C#-Entity-Framework-Core/09.XML Processing - Exercise/01.CarDealer/CarDealer/CarDealer.csproj
+++ b/10.C#-Entity-Framework-Core/09.XML Processing - Exercise/01.CarDealer/CarDealer/CarDealer.csproj
@@ -15,9 +15,25 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Datasets\cars.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\customers.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\parts.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Datasets\sales.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Datasets\suppliers.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTO\Export\" />
   </ItemGroup>
 
 </Project>
